--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "build:watch": "yarn build --watch --progress",
-    "serve": "node --enable-source-maps dist/index.js",
+    "serve": "node --enable-source-maps dist/serve.js",
     "serve:dev": "wait-on dist/server.js && NODE_OPTIONS=--enable-source-maps nodemon dist/server.js",
     "dev": "npm-run-all -s clean -p build:watch serve:dev",
     "clean": "rimraf dist",
